vlib/v/checker/tests/anon_arg_redefinition_err.vv
fn main() {
	a := fn (a int, a int) {
	}
}